# irc-bot.rs

./: Cargo.toml
src/core/: config.rs
