[package]
name = "irc-bot"
version = "0.2.1"
authors = ["c74d <8573dd@gmail.com>"]
description = "A library for writing Internet Relay Chat (IRC) bots in Rust"
homepage = "https://docs.rs/crate/irc-bot"
repository = "https://github.com/8573/irc-bot.rs"
readme = "README.md"
keywords = ["irc", "internet-relay-chat", "internet_relay_chat", "bot", "bots"]
categories = ["network-programming"]
license = "Apache-2.0"

[badges]
gitlab = { repository = "c74d/irc-bot.rs", branch = "dev" }
travis-ci = { repository = "8573/irc-bot.rs", branch = "dev" }

[dependencies]
clap = "2.34.0"
clockpro-cache = "=0.1.6" # Version locked for <https://github.com/jedisct1/rust-clockpro-cache/issues/5>
crossbeam-channel = "0.3.9"
custom_debug_derive = "0.1.7"
env_logger = "0.5.13"
error-chain = "0.12.4"
inlinable_string = "0.1.15"
irc = "0.13.6"
itertools = "0.7.11"
lazy_static = "1.5.0"
log = "0.4.22"
quantiles = "0.7.1"
rand = "0.5.6"
rando = "0.2.0"
ref_slice = "1.2.1"
regex = "1.11.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_yaml = "0.8.26"
smallbitvec = "2.5.3"
smallvec = {version = "0.6.14", features = ["serde", "std"]}
string_cache = "0.7.5"
strum = "0.10.0"
strum_macros = "0.10.0"
try_map = "0.3.1"
url = "1.7.2"
url_serde = "0.2.0"
uuid = {version = "0.6.5", features = ["v4"]}
walkdir = "2.5.0"
yaml-rust = "0.4.5"

[build-dependencies]
foreman = "0.4.0"

[dev-dependencies]
quickcheck = "0.6.2"

[features]
# Use aatxe's `irc` crate as the IRC backend.
aatxe-irc = [
  # Currently, aatxe's `irc` is the only IRC backend available.
  #"irc"
]
